<resources>
    <string name="app_name">Yummy</string>
    <string name="app_name_icon">YUMMY</string>
    <string name="app_name_company">Yummy Restaurant</string>
    <string name="address_company">54 Nguyễn Lương Bằng - Đà Nẵng</string>
    <string name="text_login">Log In</string>
    <string name="text_log_out">Log Out</string>
    <string name="text_language_setting">Language Settings</string>
    <string name="text_username">EMAIL</string>
    <string name="text_password">PASSWORD</string>
    <string name="remember">REMEMBER</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="openDrawer">OpenDrawer</string>
    <string name="closeDrawer">CloseDrawer</string>
    <string name="action_categories">CATEGORIES</string>
    <string name="action_cold_starter">COLD STARTER</string>
    <string name="action_appetizers">APPETIZERS</string>
    <string name="action_soup">SOUPS</string>
    <string name="action_main_courses">MAIN COURSES</string>
    <string name="action_cheese_biscuits">CHEESE &amp; BISCUITS</string>
    <string name="action_desserts">DESSERTS</string>
    <string name="action_checkout">PAY</string>
    <string name="action_order">ORDER</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">CANCEL</string>
    <string name="action_add">+</string>
    <string name="action_sub">-</string>
    <string name="total_price">TOTAL : </string>
    <string name="get_bill">GET BILL</string>
    <!--check internet-->
    <string name="nE">INTERNET WAS DISCONNECTED</string>
    <string name="hE">INTERNET WAS CONNECTED</string>
    <string name="action_delete">DELETE</string>
    <string name="action_undo">UNDO</string>
    <string name="delete_string">This dish was removed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--TODO: Login-->
    <string name="email_require">Email is required!</string>
    <string name="email_invalid">Email invalid!</string>
    <string name="password_require">Password is required!</string>
    <string name="password_require_length">Password is required minimum 6 characters!</string>
    <string name="password_invalid">Password invalid!</string>

    <!--login-->
    <string name="action_login_success">Login success!</string>
    <string name="action_login_fail">Login isn\'t success!</string>

    <!--title-->
    <string name="title_table_list">Table List</string>
    <string name="title_language_dialog">Languages</string>


    <string-array name="languages">
        <item>Vietnamese</item>
        <item>English</item>
    </string-array>


</resources>
