<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen"
    tools:context="com.team.ymmy.yummyapp.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_yummy"
            android:contentDescription="@string/app_name_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name_icon"
            android:textColor="@color/white"
            android:textSize="@dimen/text_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:background="@drawable/wrapper_input"
            android:layout_height="@dimen/btn_height">
            <ImageView
                android:layout_marginLeft="@dimen/margin_icon"
                android:layout_marginRight="@dimen/margin_icon"
                android:padding="@dimen/activity_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/user"
                android:contentDescription="@string/text_username" />

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_username"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_marginEnd="@dimen/activity_padding"
                android:layout_marginRight="@dimen/activity_padding"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:background="@drawable/wrapper_input"
            android:layout_marginTop="@dimen/activity_padding"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height">
            <ImageView
                android:padding="@dimen/activity_padding"
                android:layout_marginLeft="@dimen/margin_icon"
                android:layout_marginRight="@dimen/margin_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/lock"
                android:contentDescription="@string/app_name_icon" />
            <EditText
                android:id="@+id/edt_password"
                android:inputType="textPassword"
                android:hint="@string/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_marginEnd="@dimen/activity_padding"
                android:layout_marginRight="@dimen/activity_padding"
                android:singleLine="true"/>
        </LinearLayout>
        <Button
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin"
            android:id="@+id/btn_login"
            android:layout_gravity="center"
            android:text="@string/text_login"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/border_button"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <RelativeLayout
            android:padding="@dimen/activity_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/chk_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember"
                android:textColor="@color/white"
                />
            <TextView
                android:id="@+id/txt_forgot_password"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:padding="@dimen/activity_padding"
                android:textColor="@color/white"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar_login"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>